# TelSync

./: .gitignore  Cargo.toml
.github/workflows/: build.yml
src/: api.rs  aria2.rs  config.rs  main.rs  scanner.rs  state.rs  teldrive.rs
static/: app.js  index.html  style.css
